examples/test/testpolicy18277.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18277
  namespace: namespace369
spec:
  podSelector:
    matchLabels:
      key41: value44
      key23: value5
      key38: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value48
      podSelector:
        matchLabels:
          key16: value30
          key26: value43
          key44: value42
